--- a/index.html
+++ b/index.html
@@ -9,7 +9,87 @@
     <title>Panda</title>
 </head>
 <body>
-    <h1>Panda</h1>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><b>Home</b></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#shoes"><b>Shoes</b></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#backpack"><b>Backpack</b></a>
+                  </li>
+                  <li class="nav-item">
+                    <a id="t" class="nav-link" href="#subscribe">Subscribe</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </div>
+
+    <div class="container">
+        <div id="carouselExampleControls" class="carousel slide orange-bg " data-bs-interval="4000"  data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                        <h1 class="o">Mega LCD TV For Sports</h1>
+                        <p id="text">This is the best in the world for people who just want to waste time in front of tv.</p>
+                        <h1 id="price">$1200</h1>
+                        <button class="buy">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="img/tv.png" class="d-block w-100" alt="..."> 
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row align-items-center">
+                    <div class="col-md-7"> 
+                      <h1 class="o">Cool Dude Headphone</h1>
+                        <p id="text">Lorem ipsum dolor sit amet consectetur, adipisicing  iusto dolores neque consequatur repellat in voluptatibus voluptates animi, suscipit molestias repellendus doloribus Quasi.</p>
+                        <h1 id="price">$690</h1>
+                        <button class="buy">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="img/headphone.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                      <h1 class="o">Best X-Box For You</h1>
+                        <p id="text">Lorem ipsum dolor sit amet consectetur, adipisicing  iusto dolores neque consequatur repellat in voluptatibus voluptates animi, suscipit molestias repellendus doloribus Quasi.</p>
+                        <h1 id="price">$400</h1>
+                        <button class="buy">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="img/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+    
 
 
 
